--- a/index.html
+++ b/index.html
@@ -197,27 +197,19 @@
             </div>
             <br><br>
             <div class="row">
-                <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
                     <i class="fas fa-globe-americas fa-4x"></i>
                     <p>ArcGIS</p>
                 </div> 
-                <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
                     <i class="fab fa-node fa-4x"></i>
                     <p>Node.js</p>
                 </div>
-                <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
-                    <i class="icon-mysql" style="font-size: 4em;"></i>
-                    <p>MySQL</p>
-                </div>
-                <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
-                    <i class="icon-mongodb" style="font-size: 4em;"></i>
-                    <p>MongoDB</p>
-                </div>
-                <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
                     <i class="fab fa-bootstrap fa-4x"></i>
                     <p>Bootstrap</p>
                 </div>
-                <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
                     <i class="fab fa-npm fa-4x"></i>
                     <p>NPM</p>
                 </div> 
@@ -225,16 +217,16 @@
             <br><br>
             <div class="row">
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <p>MySQL</p>
+                </div>
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <p>MongoDB</p>
+                </div>
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
                     <p>Material-UI</p>
                 </div>
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
                     <p>Express.js</p>
-                </div> 
-                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <p>Handlebars</p>
-                </div> 
-                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <p>Redux</p>
                 </div> 
             </div>
             <br>
@@ -255,32 +247,36 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 d-flex flex-column justify-content-center align-items-center">
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                </div>
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
                     <i class="fab fa-linkedin fa-4x"></i>
-                    <p>LinkedIn</p>
                 </div>
-                <div class="col-md-4 d-flex flex-column justify-content-center align-items-center">
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
                     <i class="fab fa-github fa-4x"></i>
-                    <p>GitHub</p>
                 </div>
-                <div class="col-md-4 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fab fa-envelope fa-4x"></i>
-                    <p>kmvanneste17@gmail.com</p>
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-12">
+            <br>
+            <div class="row resume">
+                <div class="col-md-12 d-flex flex-column justify-content-center align-items-center">
                     <iframe
                     src="assets/images/VanNeste_Resume_10-2020.pdf"
                     title="Kristen's Resume"
+                    height="480px"
+                    width="800px"
                     >
                     </iframe>
                 </div>
             </div>
         </div>
+        <br><br>
     </section>
     <!-- Footer -->
-
+    <footer class="d-flex justify-content-center">
+        kmvn © 2020
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
