fixed contact icons

--- a/index.html
+++ b/index.html
@@ -247,15 +247,31 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                <div class="col-md-1 d-flex flex-column justify-content-center align-items-center">
                 </div>
-                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fab fa-linkedin fa-4x"></i>
+                <div class="col-md-1 d-flex flex-column justify-content-center align-items-center">
                 </div>
-                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fab fa-github fa-4x"></i>
+                <div class="col-md-1 d-flex flex-column justify-content-center align-items-center">
                 </div>
-                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                <div class="col-md-1 d-flex flex-column justify-content-center align-items-center">
+                </div>
+                <div class="col-md-1 d-flex flex-column justify-content-center align-items-center">
+                </div>
+                <div class="col-md-1 d-flex flex-column justify-content-center align-items-center">
+                    <a class="logo" href="https://www.linkedin.com/in/kristen-m-van-neste/" target="_blank"><i class="fab fa-linkedin fa-4x" ></i></a>
+                </div>
+                <div class="col-md-1 d-flex flex-column justify-content-center align-items-center">
+                    <a class="logo" href="https://github.com/kmvanneste" target="_blank"><i class="fab fa-github fa-4x" ></i></a>
+                </div>
+                <div class="col-md-1 d-flex flex-column justify-content-center align-items-center">
+                </div>
+                <div class="col-md-1 d-flex flex-column justify-content-center align-items-center">
+                </div>
+                <div class="col-md-1 d-flex flex-column justify-content-center align-items-center">
+                </div>
+                <div class="col-md-1 d-flex flex-column justify-content-center align-items-center">
+                </div>
+                <div class="col-md-1 d-flex flex-column justify-content-center align-items-center">
                 </div>
             </div>
             <br>
@@ -274,7 +290,7 @@
         <br><br>
     </section>
     <!-- Footer -->
-    <footer class="d-flex justify-content-center">
+    <footer class="footer d-flex justify-content-center">
         kmvn © 2020
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
