fixed fonts and title spacing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Prata&family=Taviraj:wght@300;400&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/font-mfizz.css">
     <link rel="stylesheet" href="assets/style.css" />
     <title>kmvn</title>
@@ -23,7 +24,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" href="#about">About</a>
-          <a class="nav-link" href="#projects">Projects</a>
+          <a class="nav-link" href="#projects">Apps</a>
           <a class="nav-link" href="#skills">Skills</a>
           <a class="nav-link" href="#contact">Contact</a>
         </div>
@@ -81,7 +82,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 d-flex justify-content-center align-items-center">
-                <h2 id="portfolioHeader">Deployed Applications</h2>
+                <h2 id="appsHeader">Deployed Applications</h2>
             </div>
         </div>
         <div class="row">
@@ -174,7 +175,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 d-flex justify-content-center align-items-center">
-                  <h2 id="aboutMeHeader">Strongest Skills</h2>
+                  <h2 id="skillsHeader">Strongest Skills</h2>
                 </div>
             </div>
             <div class="row">
@@ -214,7 +215,7 @@
                     <p>NPM</p>
                 </div> 
             </div>
-            <br><br>
+            <br><br><br><br>
             <div class="row">
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
                     <p>MySQL</p>
@@ -229,7 +230,7 @@
                     <p>Express.js</p>
                 </div> 
             </div>
-            <br>
+            <br><br><br>
             <div class="row d-flex justify-content-center align-items-center">
                 <!-- <br><br>
                 <p>
@@ -243,7 +244,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 d-flex justify-content-center align-items-center">
-                  <h2 id="aboutMeHeader">Contact</h2>
+                  <h2 id="contactHeader">Contact</h2>
                 </div>
             </div>
             <div class="row">
