added stack and technology to cards, added font mfizz icons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Prata&family=Taviraj:wght@300;400&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/font-mfizz.css">
     <link rel="stylesheet" href="assets/style.css" />
     <title>kmvn</title>
@@ -96,33 +97,51 @@
                 <div class="col-lg-4 text-center">
                     <div class="card justify-content-center">
                         <img src="./assets/images/Refresh.png" class="card-img-top" alt="Image of a Refresh Home page">
+                        <div class="card-header">
+                            <h4 class="card-title">Refresh</h4>
+                        </div>
                         <div class="card-body text-center">
-                          <h5 class="card-title">Refresh</h5>
                           <p class="card-text">Refresh is a task tracking app for one of your largest investments - your home.</p>
-                          <a href="home-refresh-app.herokuapp.com/" class="btn btn-dark">Refresh</a>
-                          <a href="https://github.com/hihellos/Refresh" class="btn btn-dark">Source Code</a>
+                          <p>MERN-Stack:</p>
+                          <p>React, Material-UI, JSX, Mongo, JWT Authentication, Node, Express, ReactStrap</p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="home-refresh-app.herokuapp.com/" class="btn btn-dark">Refresh</a>
+                            <a href="https://github.com/hihellos/Refresh" class="btn btn-dark">Code</a>
                         </div>
                    </div>
                 </div>
                 <div class="col-lg-4 text-center">
                     <div class="card justify-content-center">
                         <img src="./assets/images/LocalGrub.png" class="card-img-top" alt="Image of LocalGrub login">
+                        <div class="card-header">
+                            <h4 class="card-title">Local Grub</h4>
+                        </div>
                         <div class="card-body text-center">
-                          <h5 class="card-title">Local Grub</h5>
-                          <p class="card-text">Hungry? Why not support your local business with this personalized app. Gather restaurant information from any city and discover your new favorite (non-chain) metropolitan meal.</p>
+                          <p class="card-text">Hungry? Why not support your local business with this personalized app. Gather restaurant information from any city in the U.S. and discover your new favorite metropolitan meal.</p>
+                          <p>Full-Stack:</p>
+                          <p>React, Material-UI, JSX, Mongo, JWT Authentication, Node, Express, ReactStrap</p>
+                        </div>
+                        <div class="card-footer">
                           <a href="https://localgrub.herokuapp.com/" class="btn btn-dark">Local Grub</a>
-                          <a href="https://github.com/eplatvoet/localgrub" class="btn btn-dark">Source Code</a>
+                          <a href="https://github.com/eplatvoet/localgrub" class="btn btn-dark">Code</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 text-center">
                     <div class="card justify-content-center">
                         <img src="./assets/images/NASANow.png" class="card-img-top" alt="Image of NASA Now home page">
+                        <div class="card-header">
+                            <h4 class="card-title">NASA Now</h4>
+                        </div>
                         <div class="card-body text-center">
-                          <h5 class="card-title">NASA Now</h5>
-                          <p class="card-text">NASA NOW is a collaborative project designed to display NASA's latest photographs, media, and youtube videos.</p>
+                          <p class="card-text">NASA Now displays NASA's latest photographs, media, and youtube videos.</p>
+                          <p>Front-End App:</p>
+                          <p>HTML5, CSS3, Bootstrap, JavaScript, jQuery, NASA API, YouTube API</p>
+                        </div>
+                        <div class="card-footer">
                           <a href="https://kmvanneste.github.io/NASA-Now/" class="btn btn-dark">NASA Now</a>
-                          <a href="https://github.com/kmvanneste/NASA-Now" class="btn btn-dark">Source Code</a>
+                          <a href="https://github.com/kmvanneste/NASA-Now" class="btn btn-dark">Code</a>
                         </div>
                     </div>
                 </div>
@@ -138,33 +157,51 @@
             <div class="col-lg-4 text-center">
                 <div class="card justify-content-center">
                     <img src="./assets/images/City_Weather.png" class="card-img-top" alt="Screenshot of city weather app">
+                    <div class="card-header">
+                        <h4 class="card-title">City Weather</h4>
+                    </div>
                     <div class="card-body text-center">
-                      <h5 class="card-title">City Weather</h5>
                       <p class="card-text">Traveling to your favorite metropolitan area? Use City-Weather to help plan your next trip.</p>
+                      <p>Front-End App:</p>
+                      <p>HTML5, CSS3, Bootstrap, JavaScript, OpenWeather API</p>
+                    </div>
+                    <div class="card-footer">
                       <a href="https://kmvanneste.github.io/City-Weather/" class="btn btn-dark">City Weather</a>
-                      <a href="https://github.com/kmvanneste/City-Weather" class="btn btn-dark">Source Code</a>
+                      <a href="https://github.com/kmvanneste/City-Weather" class="btn btn-dark">Code</a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 text-center">
                 <div class="card justify-content-center">
                     <img src="./assets/images/lion.jpg" class="card-img-top" alt="Image of a lion yawning">
+                    <div class="card-header">
+                        <h4 class="card-title">Animal Quiz</h4>
+                    </div>
                     <div class="card-body text-center">
-                      <h5 class="card-title">Animal Quiz</h5>
                       <p class="card-text">So you think you know a thing or two about the animal kingdom? Take this timed quiz to test your knowledge!</p>
+                      <p>Front-End App:</p>
+                      <p>HTML5, CSS3, JavaScript</p>
+                    </div>
+                    <div class="card-footer">
                       <a href="https://kmvanneste.github.io/Code-Quiz/" class="btn btn-dark">Animal Quiz</a>
-                      <a href="https://github.com/kmvanneste/Code-Quiz" class="btn btn-dark">Source Code</a>
+                      <a href="https://github.com/kmvanneste/Code-Quiz" class="btn btn-dark">Code</a>
                   </div>
                 </div>
             </div>
             <div class="col-lg-4 text-center">
                 <div class="card justify-content-center">
                     <img src="./assets/images/Budget.png" class="card-img-top" alt="Budget App Screenshot">
+                    <div class="card-header">
+                        <h4 class="card-title">No Excuses, The Budget App</h4>
+                    </div>
                     <div class="card-body text-center">
-                      <h5 class="card-title">No Excuses, The Budget App</h5>
                       <p class="card-text">Keep your bank account balanced with The Budget App. Users can add expenses and deposits to their budget with or without an internet connection.</p>
+                      <p>PWA, Offline-Compatible, Full-Stack App:</p>
+                      <p>HTML5, CSS3, Bootstrap, MongoDB, JavaScript, Node, Express</p>
+                    </div>
+                    <div class="card-footer">
                       <a href="https://my-notepad-kvn.herokuapp.com/" class="btn btn-dark">The Budget App</a>
-                      <a href="https://github.com/kmvanneste/No-Excuses-The-Budget-App" class="btn btn-dark">Source Code</a>
+                      <a href="https://github.com/kmvanneste/No-Excuses-The-Budget-App" class="btn btn-dark">Code</a>
                 </div>
               </div>
             </div>
@@ -215,16 +252,18 @@
                     <p>NPM</p>
                 </div> 
             </div>
-            <br><br><br><br>
+            <br>
             <div class="row">
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <p>Material-UI</p>
+                </div>
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <i class="icon-mongodb" style="font-size: 4rem;"></i>
                     <p>MySQL</p>
                 </div>
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <i class="icon-mongodb" style="font-size: 4rem;"></i>
                     <p>MongoDB</p>
-                </div>
-                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <p>Material-UI</p>
                 </div>
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
                     <p>Express.js</p>
