fixed hover colors and mysql icon

--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
             <!-- row 1 -->
             <div class="row justify-content-center">
                 <div class="col-lg-4 text-center">
-                    <div class="card justify-content-center">
+                    <div class="card shadow-lg justify-content-center">
                         <img src="./assets/images/Refresh.png" class="card-img-top" alt="Image of a Refresh Home page">
                         <div class="card-header">
                             <h4 class="card-title">Refresh</h4>
                         </div>
-                        <div class="card-body text-center">
+                        <div class="card-body shadow-lg text-center">
                           <p class="card-text">Refresh is a task tracking app for one of your largest investments - your home.</p>
                           <p>MERN-Stack:</p>
                           <p>React, Material-UI, JSX, Mongo, JWT Authentication, Node, Express, ReactStrap</p>
@@ -112,13 +112,13 @@
                    </div>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <div class="card justify-content-center">
+                    <div class="card shadow-lg justify-content-center">
                         <img src="./assets/images/LocalGrub.png" class="card-img-top" alt="Image of LocalGrub login">
                         <div class="card-header">
                             <h4 class="card-title">Local Grub</h4>
                         </div>
-                        <div class="card-body text-center">
-                          <p class="card-text">Hungry? Why not support your local business with this personalized app. Gather restaurant information from any city in the U.S. and discover your new favorite metropolitan meal.</p>
+                        <div class="card-body shadow-lg text-center">
+                          <p class="card-text">Hungry? Support local businesses with this personalized app. Bookmark restaurants in any U.S. city and discover your new favorite family restaurant.</p>
                           <p>Full-Stack:</p>
                           <p>React, Material-UI, JSX, Mongo, JWT Authentication, Node, Express, ReactStrap</p>
                         </div>
@@ -129,12 +129,12 @@
                     </div>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <div class="card justify-content-center">
+                    <div class="card shadow-lg justify-content-center">
                         <img src="./assets/images/NASANow.png" class="card-img-top" alt="Image of NASA Now home page">
                         <div class="card-header">
                             <h4 class="card-title">NASA Now</h4>
                         </div>
-                        <div class="card-body text-center">
+                        <div class="card-body shadow-lg text-center">
                           <p class="card-text">NASA Now displays NASA's latest photographs, media, and youtube videos.</p>
                           <p>Front-End App:</p>
                           <p>HTML5, CSS3, Bootstrap, JavaScript, jQuery, NASA API, YouTube API</p>
@@ -155,12 +155,12 @@
         <!-- Row 2 -->
         <div class="row">
             <div class="col-lg-4 text-center">
-                <div class="card justify-content-center">
+                <div class="card shadow-lg justify-content-center">
                     <img src="./assets/images/City_Weather.png" class="card-img-top" alt="Screenshot of city weather app">
                     <div class="card-header">
                         <h4 class="card-title">City Weather</h4>
                     </div>
-                    <div class="card-body text-center">
+                    <div class="card-body shadow-lg text-center">
                       <p class="card-text">Traveling to your favorite metropolitan area? Use City-Weather to help plan your next trip.</p>
                       <p>Front-End App:</p>
                       <p>HTML5, CSS3, Bootstrap, JavaScript, OpenWeather API</p>
@@ -172,12 +172,12 @@
                 </div>
             </div>
             <div class="col-lg-4 text-center">
-                <div class="card justify-content-center">
+                <div class="card shadow-lg justify-content-center">
                     <img src="./assets/images/lion.jpg" class="card-img-top" alt="Image of a lion yawning">
                     <div class="card-header">
                         <h4 class="card-title">Animal Quiz</h4>
                     </div>
-                    <div class="card-body text-center">
+                    <div class="card-body shadow-lg text-center">
                       <p class="card-text">So you think you know a thing or two about the animal kingdom? Take this timed quiz to test your knowledge!</p>
                       <p>Front-End App:</p>
                       <p>HTML5, CSS3, JavaScript</p>
@@ -189,12 +189,12 @@
                 </div>
             </div>
             <div class="col-lg-4 text-center">
-                <div class="card justify-content-center">
+                <div class="card shadow-lg justify-content-center">
                     <img src="./assets/images/Budget.png" class="card-img-top" alt="Budget App Screenshot">
                     <div class="card-header">
                         <h4 class="card-title">No Excuses, The Budget App</h4>
                     </div>
-                    <div class="card-body text-center">
+                    <div class="card-body shadow-lg text-center">
                       <p class="card-text">Keep your bank account balanced with The Budget App. Users can add expenses and deposits to their budget with or without an internet connection.</p>
                       <p>PWA, Offline-Compatible, Full-Stack App:</p>
                       <p>HTML5, CSS3, Bootstrap, MongoDB, JavaScript, Node, Express</p>
@@ -258,7 +258,7 @@
                     <p>Material-UI</p>
                 </div>
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <i class="icon-mongodb" style="font-size: 4rem;"></i>
+                    <i class="icon-mysql" style="font-size: 4rem;"></i>
                     <p>MySQL</p>
                 </div>
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
@@ -322,6 +322,7 @@
                     title="Kristen's Resume"
                     height="480px"
                     width="800px"
+                    class="shadow-lg"
                     >
                     </iframe>
                 </div>
