--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <h4 class="card-title">No Excuses, The Budget App</h4>
                     </div>
                     <div class="card-body shadow-lg text-center">
-                      <p class="card-text">Keep your bank account balanced with The Budget App. Users can add expenses and deposits to their budget with or without an internet connection.</p>
+                      <p class="card-text">Keep your budget balanced by adding expenses and deposits with or without an internet connection.</p>
                       <p>PWA, Offline-Compatible, Full-Stack App:</p>
                       <p>HTML5, CSS3, Bootstrap, MongoDB, JavaScript, Node, Express</p>
                     </div>
@@ -318,7 +318,7 @@
             <div class="row resume">
                 <div class="col-md-12 d-flex flex-column justify-content-center align-items-center">
                     <iframe
-                    src="assets/images/VanNeste_Resume_10-2020.pdf"
+                    src="assets/images/Black_Resume_10_2020.pdf"
                     title="Kristen's Resume"
                     height="480px"
                     width="800px"
