fixed links in project section

--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
               realized I was on the wrong career path - I turned down a funded
               Master's position at the University of Wisconsin and started
               studying web development. When COVID-19 spread to the eastern
-              United States, I invested in myself and enrolled in the Rutgers
-              University Coding Bootcamp. I graduated in October of 2020 and am
+              United States, I enrolled in the Rutgers University Coding Bootcamp. I graduated in October of 2020 and am
               looking forward to joining a team of software engineers.
             </p>
           </div>
@@ -167,10 +166,10 @@
               </p>
             </div>
             <div class="card-footer">
-              <a href="home-refresh-app.herokuapp.com/" class="btn btn-dark"
+              <a href="https://home-refresh-app.herokuapp.com/" class="btn btn-dark" target="blank"
                 >Refresh</a
               >
-              <a href="https://github.com/hihellos/Refresh" class="btn btn-dark"
+              <a href="https://github.com/hihellos/Refresh" class="btn btn-dark" target="blank"
                 >Code</a
               >
             </div>
@@ -198,12 +197,12 @@
               </p>
             </div>
             <div class="card-footer">
-              <a href="https://localgrub.herokuapp.com/" class="btn btn-dark"
+              <a href="https://localgrub.herokuapp.com/" class="btn btn-dark" target="blank"
                 >Local Grub</a
               >
               <a
                 href="https://github.com/eplatvoet/localgrub"
-                class="btn btn-dark"
+                class="btn btn-dark" target="blank"
                 >Code</a
               >
             </div>
@@ -234,11 +233,13 @@
               <a
                 href="https://kmvanneste.github.io/NASA-Now/"
                 class="btn btn-dark"
+                target="blank"
                 >NASA Now</a
               >
               <a
                 href="https://github.com/kmvanneste/NASA-Now"
                 class="btn btn-dark"
+                target="blank"
                 >Code</a
               >
             </div>
@@ -275,11 +276,13 @@
               <a
                 href="https://kmvanneste.github.io/City-Weather/"
                 class="btn btn-dark"
+                target="blank"
                 >City Weather</a
               >
               <a
                 href="https://github.com/kmvanneste/City-Weather"
                 class="btn btn-dark"
+                target="blank"
                 >Code</a
               >
             </div>
@@ -307,11 +310,13 @@
               <a
                 href="https://kmvanneste.github.io/Code-Quiz/"
                 class="btn btn-dark"
+                target="blank"
                 >Animal Quiz</a
               >
               <a
                 href="https://github.com/kmvanneste/Code-Quiz"
                 class="btn btn-dark"
+                target="blank"
                 >Code</a
               >
             </div>
@@ -337,13 +342,15 @@
             </div>
             <div class="card-footer">
               <a
-                href="https://my-notepad-kvn.herokuapp.com/"
+                href="https://no-excuses-the-budget-app.herokuapp.com/"
                 class="btn btn-dark"
+                target="blank"
                 >The Budget App</a
               >
               <a
                 href="https://github.com/kmvanneste/No-Excuses-The-Budget-App"
                 class="btn btn-dark"
+                target="blank"
                 >Code</a
               >
             </div>
